# pytts

./: .gitmodules  CNAME  README.md  pyproject.toml  pytts.py  requirements.txt  test.py
.tts/: tts.db
docs/: .buildinfo  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/apis/: rest.rst.txt
docs/_sources/tts_engines/: gtts.rst.txt  pico.rst.txt  sapi.rst.txt
docs/_static/: documentation_options.js
docs/apis/: rest.html  socket.html
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/apis/: rest.doctree  socket.doctree
docs/doctrees/tts_engines/: gctts.doctree  gtts.doctree  nsss.doctree  pico.doctree  polly.doctree  pyttsx3.doctree  sapi.doctree
docs/src/: Makefile  conf.py  index.rst  make.bat
docs/src/_build/doctrees/: environment.pickle  index.doctree
docs/src/_build/doctrees/tts_engines/: gctts.doctree  gtts.doctree  nsss.doctree  pico.doctree  polly.doctree  pyttsx3.doctree  sapi.doctree
docs/src/_build/html/: .buildinfo  index.html  py-modindex.html
docs/src/_build/html/_sources/: index.rst.txt
docs/src/_build/html/_sources/tts_engines/: pyttsx3.rst.txt
docs/src/_build/html/_static/: documentation_options.js
docs/src/_build/html/tts_engines/: pico.html  pyttsx3.html
docs/src/apis/: rest.rst  socket.rst
docs/src/tts_engines/: gctts.rst  nsss.rst  polly.rst
docs/tts_engines/: gctts.html  gtts.html  nsss.html  pico.html  polly.html  pyttsx3.html  sapi.html
